# flist-workbench

./: .gitattributes  .gitignore  build-win.ps1  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  playwright.compare.config.ts  playwright.config.ts  playwright.uxtest.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
docs/: INSTALL_WINDOWS.md  PACKAGING_WINDOWS.md  PHASE7_TIER7_PLAN.md  WORKING_SETS_V2_DESIGN.md
electron/: contextMenu.ts  main.ts  menu.ts  preload.ts  sidecar.ts
extension/: README.md  background.js  content.css  content.js  manifest.json  pageworld.js  popup.html  popup.js
sidecar/: ai_draft.py  ai_draft_validate.py  ai_tools_atomic.py  ai_tools_composite.py  ai_tools_read.py  aliases.py  assistant_chat.py  character_archive.py  chunker.py  documents.py  eicons.py  flist.py  flist_activity.py  flist_api.py  labels.py  labels_jobs.py  labels_llm.py  logs.py  parser.py  paths.py  pyproject.toml  rag.py  rag_chat.py  rag_embed.py  rag_expand.py  rag_jobs.py  rag_lexical.py  rag_query.py  rag_rerank.py  rag_store.py  restore.py  server.py  set_bundle.py  settings.py  system.py  zip_serialise.py
sidecar/prompts/: assistant_v1_nsfw_aware.txt  assistant_v1_nsfw_de.txt  assistant_v1_nsfw_en.txt  assistant_v1_sfw.txt  assistant_v1_sfw_de.txt  assistant_v1_sfw_en.txt
sidecar/tests/: test_ai_draft.py  test_ai_draft_api.py  test_ai_draft_validate.py  test_ai_tools_composite.py  test_ai_tools_read.py  test_aliases.py  test_aliases_api.py  test_assistant_chat.py  test_backups_zip_api.py  test_character_archive.py  test_chunker.py  test_documents.py  test_documents_api.py  test_flist_activity.py  test_flist_api.py  test_flist_api_endpoints.py  test_health.py  test_labels.py  test_labels_llm.py  test_logs.py  test_logs_aliases.py  test_parser.py  test_pool_api.py  test_profile.py  test_rag_chat.py  test_rag_embed.py  test_rag_expand.py  test_rag_jobs.py  test_rag_lexical.py  test_rag_query.py  test_rag_query_api.py  test_rag_rerank.py  test_rag_settings.py  test_rag_store.py  test_set_bundle.py  test_set_migration.py  test_sets_api.py  test_settings.py  test_snapshots_api.py  test_system.py  (+4 more)
sidecar/tests/fixtures/: get_api_ticket_response.json  profile_azure_viper.html
sidecar/tests/fixtures/working/: custom_kinks_sample.json
(+172 files in other folders)
