[project]
name = "flist-workbench-sidecar"
version = "0.0.0"
description = "Python sidecar for F-list Workbench."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.28",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "httpx>=0.28",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
