[project]
name = "flist-workbench-sidecar"
version = "0.0.0"
description = "Python sidecar for F-list Workbench."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.28",
  # qdrant-client in embedded mode persists vectors to a folder on
  # disk — no docker, no port 6333. Pin major because the local-mode
  # API still tightens occasionally. fastembed/onnxruntime are NOT
  # pulled in here for embedding (we use LM Studio for that); we add
  # fastembed directly below for the cross-encoder reranker.
  "qdrant-client>=1.12,<2",
  # fastembed: ONNX-runtime-based cross-encoder reranking. Avoids
  # torch (~2 GB) and CUDA detection — the reranker model is ~568 MB
  # for bge-reranker-v2-m3 and downloads to a user cache on first use.
  # Embedding stays in LM Studio; fastembed is rerank-only here.
  "fastembed>=0.7,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "httpx>=0.28",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
